<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <!-- OptimusX String -->
    <string name="app_name">OptimusX</string>
    <string name="my_ring">我的设备</string>
    <string name="cards">所有名片</string>
    <string name="setting">设置</string>
    <string name="s_ring_btn">查看详情</string>
    <string name="title_activity_setting">设置</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_rings">我的设备</string>
    <string name="title_activity_ring_opt">设备操作</string>
    <string name="title_activity_card_reading">北京公交卡</string>
    <string name="title_activity_about">关于OptimusX</string>
    <string name="about">OptimusX项目组</string>
    <string name="title_activity_login">登陆到OptimusX.com</string>
    <string name="title_activity_new_ring">重新绑定设备</string>
    <string name="title_activity_init_new_ring">初始化一个新的设备</string>
    <string name="menu_refresh">Refresh</string>
    <string name="open">open drawer</string>
    <string name="close">close drawer</string>
    <string name="title_activity_view_contact">查看名片</string>
    <string name="title_activity_edit_personnal_info">编辑个人信息</string>
    <string name="title_activity_all_business_card">所有名片</string>
    <string name="near_by_devices">附近的设备:</string>
    <string name="dial_to">打电话</string>
    <string name="sms_to">发短信</string>
    <string name="text_name">名字：</string>
    <string name="text_schnum">学号：</string>
    <string name="text_phonenum">电话：</string>
    <string name="social_sync">社交模式同步!</string>
    <string name="read_bjm">读卡!</string>
    <string name="device_preferences">DEVICE_PREFERENCES</string>
    <string name="device_name">DEVICE_NAME</string>
    <string name="device_address">DEVICE_ADDRESS</string>
    <string name="device_pwd">DEVICE_PWD</string>
    <string name="preference_seed">33784545</string>
    <string name="guide_step_1">1、搜索附近的AirBand智能手环</string>
    <string name="guide_step_2">2、输入手环名称及密码进行绑定</string>
    <string name="guide_step_3">3、设定个人信息</string>
    <string name="title_activity_guide">引导</string>
    <string name="title_activity_logo">欢迎</string>
    <string name="title_activity_enter">进入</string>
    <string name="read_balance_help">请将北京公交一卡通放在设备的感应区上,并按下"读卡"按钮</string>
    <!-- BLE string -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_edit">Edit</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_contact">EditContactActivityActivity</string>

</resources>
