<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.OptimusxAct.DeviceOperation.MyRingsFragment"
	android:orientation="vertical" >

	<android.support.v7.widget.CardView
          android:id="@+id/act_my_rings_card_view"
          android:layout_width="match_parent"
          android:layout_height="96dp"
          android:layout_gravity="center"
          app:cardBackgroundColor="#CCCCCC"
          app:cardCornerRadius="4dp"
          app:cardUseCompatPadding="true"
          app:cardElevation="4dp" >
          <RelativeLayout
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" >

              <ImageView
                  android:id="@+id/img_ava"
                  android:layout_width="40dp"
                  android:layout_height="40dp"
                  android:layout_alignParentLeft="true"
                  android:layout_centerVertical="true"
                  android:layout_marginLeft="16dp"
                  android:src="@drawable/flatbutton" />

              <TextView
                  android:id="@+id/text_name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_above="@+id/img_ava"
                  android:layout_marginLeft="16dp"
                  android:layout_toRightOf="@+id/img_ava"
                  android:text="@string/text_name"
                  android:textSize="14sp"
                  android:textColor="@color/primary_text" />

              <TextView
                  android:id="@+id/act_view_contact_name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignBaseline="@+id/text_name"
                  android:layout_alignBottom="@+id/text_name"
                  android:layout_toRightOf="@+id/text_name"
                  android:text="李培轩"
                  android:textSize="14sp"
                  android:textColor="@color/primary_text" />

              <TextView
                  android:id="@+id/text_schnum"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignLeft="@+id/text_name"
                  android:layout_centerVertical="true"
                  android:text="@string/text_schnum"
                  android:textColor="@color/primary_text" />

              <TextView
                  android:id="@+id/tv_schnum"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignBaseline="@+id/text_schnum"
                  android:layout_alignBottom="@+id/text_schnum"
                  android:layout_toRightOf="@+id/text_schnum"
                  android:text="12021245"
                  android:textColor="@color/primary_text" />

              <TextView
                  android:id="@+id/text_phonenum"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignLeft="@+id/text_schnum"
                  android:layout_below="@+id/img_ava"
                  android:text="@string/text_phonenum"
                  android:textSize="14sp"
                  android:textColor="@color/primary_text" />

              <TextView
                  android:id="@+id/tv_phonenum"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignBaseline="@+id/text_phonenum"
                  android:layout_alignBottom="@+id/text_phonenum"
                  android:layout_toRightOf="@+id/text_phonenum"
                  android:text="15652916090"
                  android:textColor="@color/primary_text" />

			  <ImageButton
			      android:id="@+id/edit_me"
			      style="?android:attr/borderlessButtonStyle"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_alignParentBottom="true"
			      android:layout_alignParentEnd="true"
			      android:layout_alignParentRight="true"
			      android:layout_alignParentTop="true"
			      android:src="@drawable/ic_action_edit" />

          </RelativeLayout>
	</android.support.v7.widget.CardView>
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" > 
		<Button
	        android:id="@+id/btn_login_jiaowu"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:textColor="@color/primary_text"
			style="?android:attr/borderlessButtonStyle"
	        android:text="登教务"
            android:background="@android:color/holo_blue_light" />

		<Button
		    android:id="@+id/btn_watch_class"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
			style="?android:attr/borderlessButtonStyle"
		    android:text="看课程"
            android:background="@android:color/holo_green_light"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

		<Button
		    android:id="@+id/btn_find_classroom"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
			style="?android:attr/borderlessButtonStyle"
		    android:text="查教室"
            android:background="@android:color/holo_orange_light"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/btn_watch_class" />

		<Button
		    android:id="@+id/btn_grades"
		    style="?android:attr/borderlessButtonStyle"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:layout_toRightOf="@+id/btn_login_jiaowu"
		    android:text="查成绩"
		    android:textColor="@color/primary_text"
            android:background="@android:color/holo_red_light" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="读取公交卡余额"
            android:id="@+id/btn_read_balance"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btn_login_jiaowu"
            android:textColor="@color/primary_text"
            android:background="@android:color/holo_orange_light"/>

    </RelativeLayout>

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >

		<ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentLeft="true"
		    android:layout_alignParentRight="true"
		    android:layout_alignParentTop="true"
		    android:src="@drawable/flatbutton" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:src="@drawable/band"
            android:layout_alignTop="@+id/btn_func"
            android:layout_marginTop="-60dp"
            android:layout_alignParentStart="true" />

		<Button
		    android:id="@+id/btn_func"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_centerHorizontal="true"
		    android:layout_marginBottom="112dp"
		    android:text="@string/social_sync"
			style="?android:attr/borderlessButtonStyle"
		    android:textSize="20sp"
            android:textColor="@color/primary_text"/>
    </RelativeLayout>
</LinearLayout>